Update Post “基础巩固第一天”

--- a/source/_posts/基础巩固第一天.md
+++ b/source/_posts/基础巩固第一天.md
@@ -14,3 +14,14 @@ date: 2021-12-15T04:46:43.695Z
    * 健壮性：强类型机制、异常处理、垃圾自动回收
 2. jdk：开发工具包，jre：运行环境；jdk功能比jre全的多；
 3. 数据类型
+
+   |  数据类型  | 字节  | 内存 |  默认值 |
+   |  ----     | ---- | ----|  ----  |
+   | byte   | 1 |  8bits     |   0  |
+   | short  | 2 |  16bits    |  0   |
+   | int    | 4 |  32bits    |  0   |
+   | long   | 8 |  64bits    |  0L   |
+   | float  | 4 |  32bits    |  0.0f   |
+   | double | 8 |  64bits    |  0.0d   |
+   | char  | 2 |  16bits    |  \u0000   |
+   | boolean  | 1 |  8bits    |  false   |
