Update Post “基础巩固第一天-1”

--- a/source/_posts/基础巩固第一天-1.md
+++ b/source/_posts/基础巩固第一天-1.md
@@ -33,5 +33,5 @@ date: 2021-12-15T06:05:52.572Z
 |运行|1|2|3|
 |---|---|---|---|
 |int a = 5;|a=5;|||
-|int b = ++a;||a=6;b=6;||
-|int c = a++;|||a=7;b=6;c=6;|
+|int b = ++a;|a=5;|a=6;b=6;||
+|int c = a++;||a=6;|a=7;b=6;c=6;|
