--- a/source/_posts/基础巩固第一天-1.md
+++ b/source/_posts/基础巩固第一天-1.md
@@ -30,8 +30,24 @@ date: 2021-12-15T06:05:52.572Z
 
 4.自增自减
 
-|运行|1|2|3|
-|---|---|---|---|
-|int a = 5;|a=5;|||
-|int b = ++a;|a=5;|a=6;b=6;||
-|int c = a++;||a=6;|a=7;b=6;c=6;|
+| 运行           | 1    | 2        | 3            |
+| ------------ | ---- | -------- | ------------ |
+| int a = 5;   | a=5; |          |              |
+| int b = ++a; | a=5; | a=6;b=6; |              |
+| int c = a++; |      | a=6;     | a=7;b=6;c=6; |
+
+5.运算符
+
+* 位运算符：
+
+```java
+int q = 8 >> 1;        
+System.out.println(q);  //4
+```
+
+* 三元运算符
+
+```java
+String a = 1>2 ?"对了":"错了";
+System.out.println(a);   //错了
+```
