--- a/source/_posts/基础巩固第一天-1.md
+++ b/source/_posts/基础巩固第一天-1.md
@@ -35,7 +35,6 @@ date: 2021-12-15T06:05:52.572Z
    | int a = 5;   | a=5; |          |              |
    | int b = ++a; | a=5; | a=6;b=6; |              |
    | int c = a++; |      | a=6;     | a=7;b=6;c=6; |
-
 5. 运算符
 
 * 位运算符：
@@ -51,3 +50,20 @@ System.out.println(q);  //4
 String a = 1>2 ?"对了":"错了";
 System.out.println(a);   //错了
 ```
+
+6. switch语句
+
+   ```java
+   String a = "3";                   
+   switch(a){                        
+       case "1":                     
+           System.out.println(1);    
+           break;                    
+       case "2":                     
+           System.out.println(2);    
+           break;                    
+       default:                      
+           System.out.println("没有"); 
+           break;                    
+   }                                 
+   ```
