Update Post “基础巩固第一天-1”

--- a/source/_posts/基础巩固第一天-1.md
+++ b/source/_posts/基础巩固第一天-1.md
@@ -67,3 +67,46 @@ System.out.println(a);   //错了
            break;                    
    }                                 
    ```
+7. for-each语句
+
+   ```java
+   int[] a = {1,3,7};         
+   for(int e : a){            
+       if(e==3){              
+            //break;            
+             //return;          
+          continue;           
+       }                      
+       System.out.println(e); 
+   }                          
+   ```
+8. 类初始化顺序
+
+   ```java
+   class LifeCycle{          
+     //顺序：静态属性-静态代码块-普通属性-普通方法块-构造属性-普通方法
+       
+     //静态属性                                                    
+       private static final String ajing = "Say hello";          
+       //静态代码块                                                   
+       static {                                                  
+           System.out.println("静态代码块");                          
+       }                                                         
+       //普通属性                                                    
+       private String name = "shu";                              
+       //普通方法块                                                   
+       {                                                         
+           System.out.println(this.name);                        
+       }                                                         
+       //构造属性                                                    
+       public  LifeCycle(){                                      
+           System.out.println("构造");                             
+       }                                                         
+       //普通方法                                                    
+       public static String getName(){                           
+           System.out.println("public");                         
+           return "public";                                      
+       }       
+   }
+
+   ```
