Update Post “基础巩固第一天-1”

--- a/source/_posts/基础巩固第一天-1.md
+++ b/source/_posts/基础巩固第一天-1.md
@@ -110,3 +110,14 @@ System.out.println(a);   //错了
    }
 
    ```
+9.  可变参数
+
+   ```java
+   public static void main(String[] args) {                                                           
+       int[] a = {2,2};                         
+       bianCan(a);                              
+   }                                            
+   public static void bianCan(int... number){   
+       System.out.println(number.length);       
+   }                                            
+   ```
