--- a/source/_posts/基础巩固第一天-1.md
+++ b/source/_posts/基础巩固第一天-1.md
@@ -37,20 +37,18 @@ date: 2021-12-15T06:05:52.572Z
    | int c = a++; |      | a=6;     | a=7;b=6;c=6; |
 5. 运算符
 
-* 位运算符：
+   * 位运算符
 
-```java
-int q = 8 >> 1;        
-System.out.println(q);  //4
-```
+     ```java
+     int q = 8 >> 1;        
+     System.out.println(q);  //4
+     ```
+   * 三元运算符
 
-* 三元运算符
-
-```java
-String a = 1>2 ?"对了":"错了";
-System.out.println(a);   //错了
-```
-
+     ```java
+     String a = 1>2 ?"对了":"错了";
+     System.out.println(a);   //错了
+     ```
 6. switch语句
 
    ```java
@@ -108,9 +106,10 @@ System.out.println(a);   //错了
            return "public";                                      
        }       
    }
-
    ```
-9.  可变参数
+
+
+9. 可变参数
 
    ```java
    public static void main(String[] args) {                                                     
@@ -119,5 +118,5 @@ System.out.println(a);   //错了
    }                                            
    public static void bianCan(int... number){   
        System.out.println(number.length);       
-   }                                            
+   }   
    ```
