Update Post “基础巩固第一天-1”

--- a/source/_posts/基础巩固第一天-1.md
+++ b/source/_posts/基础巩固第一天-1.md
@@ -107,8 +107,6 @@ date: 2021-12-15T06:05:52.572Z
        }       
    }
    ```
-
-
 9. 可变参数
 
    ```java
@@ -120,3 +118,22 @@ date: 2021-12-15T06:05:52.572Z
        System.out.println(number.length);       
    }   
    ```
+10. this和super
+
+    ```java
+    class Apple {
+      private int num = 0; 
+                      
+      Apple eatApple(){
+        num++;       
+        return this; //返回Apple实例
+      }    
+       public static void main(String[] args) {                           
+         Apple apple = new Apple();                                    
+         System.out.println(
+           apple.eatApple().eatApple().eatApple().num
+         );
+                                                                                                                                                                
+     }                                                                  
+    }
+    ```
