Update Post “基础巩固第一天-1”

--- a/source/_posts/基础巩固第一天-1.md
+++ b/source/_posts/基础巩固第一天-1.md
@@ -123,7 +123,11 @@ date: 2021-12-15T06:05:52.572Z
     ```java
     class Apple {
       private int num = 0; 
-                      
+         
+      public Apple(int num){ 
+        this(num);  //构造传值
+      }
+      
       Apple eatApple(){
         num++;       
         return this; //返回Apple实例
@@ -137,3 +141,8 @@ date: 2021-12-15T06:05:52.572Z
      }                                                                  
     }
     ```
+   |关键字|this|super|
+   |---|---|---|
+   |调用方式|调用本类的属性、构造函数、方法|调用父类的属性、构造函数、方法|
+   |调用位置|构造函数第一行，其他没事|构造函数第一行，其他没事|
+   |调用次数|一个构造函数只能调用一次|一个构造函数只能调用一次|
