Update Post “基础巩固第一天-1”

--- a/source/_posts/基础巩固第一天-1.md
+++ b/source/_posts/基础巩固第一天-1.md
@@ -2,18 +2,19 @@
 title: 基础巩固第一天
 date: 2021-12-15T06:05:52.572Z
 ---
-1. Java的特点
+Java的特点
 
-   * 可以不用严格按照顺序执行每个动作
-   * 不用手动管理对象的生命周期
-   * 使用框架快捷开发
-   * 强类型语言比弱类型语言效率高、速度快
-   * 可移植性 `java->.class->.jar`
-   * 用户空间多线程
-   * JTL动态编译器在运行时将热点代码编译机器码，效率高
-   * 健壮性：强类型机制、异常处理、垃圾自动回收
-2. jdk：开发工具包，jre：运行环境；jdk功能比jre全的多；
-3. 数据类型
+* 可以不用严格按照顺序执行每个动作
+* 不用手动管理对象的生命周期
+* 使用框架快捷开发
+* 强类型语言比弱类型语言效率高、速度快
+* 可移植性 `java->.class->.jar`
+* 用户空间多线程
+* JTL动态编译器在运行时将热点代码编译机器码，效率高
+* 健壮性：强类型机制、异常处理、垃圾自动回收
+
+1. jdk：开发工具包，jre：运行环境；jdk功能比jre全的多；
+2. 数据类型
 
    | 数据类型    | 字节  | 内存     | 默认值    |
    | ------- | --- | ------ | ------ |
@@ -141,8 +142,15 @@ date: 2021-12-15T06:05:52.572Z
      }                                                                  
     }
     ```
-   |关键字|this|super|
-   |---|---|---|
-   |调用方式|调用本类的属性、构造函数、方法|调用父类的属性、构造函数、方法|
-   |调用位置|构造函数第一行，其他没事|构造函数第一行，其他没事|
-   |调用次数|一个构造函数只能调用一次|一个构造函数只能调用一次|
+
+    | 关键字  | this            | super           |
+    | ---- | --------------- | --------------- |
+    | 调用方式 | 调用本类的属性、构造函数、方法 | 调用父类的属性、构造函数、方法 |
+    | 调用位置 | 构造函数第一行，其他没事    | 构造函数第一行，其他没事    |
+    | 调用次数 | 一个构造函数只能调用一次    | 一个构造函数只能调用一次    |
+11. 访问控制权限又称`封装`
+
+    * private:  同一类中
+    * default: 同一包中
+    * protected： 同一包中，和子类
+    * public： 全包
