Update Post “基础巩固第一天-1”

--- a/source/_posts/基础巩固第一天-1.md
+++ b/source/_posts/基础巩固第一天-1.md
@@ -154,3 +154,8 @@ Java的特点
     * default: 同一包中
     * protected： 同一包中，和子类
     * public： 全包
+12. 多态
+
+    * 继承 extends 
+    * 重写父类方法
+    * 父类引用指向子类对象
