Update Post “基础巩固第一天-1”

--- a/source/_posts/基础巩固第一天-1.md
+++ b/source/_posts/基础巩固第一天-1.md
@@ -159,3 +159,20 @@ Java的特点
     * 继承 extends 
     * 重写父类方法
     * 父类引用指向子类对象
+
+    ```java
+    class Father{                                  
+                                                   
+        public void hello(){                       
+            System.out.println("father say hello");
+        }                                          
+    }                                              
+                                                   
+    class Son extends Father{                      
+        public static void main(String[] args) {   
+            Father son = new Son();                
+            son.hello();                           
+        }                                          
+    }                                              
+    ```
+13.
