--- a/source/_posts/基础巩固第一天-1.md
+++ b/source/_posts/基础巩固第一天-1.md
@@ -175,4 +175,34 @@ Java的特点
         }                                          
     }                                              
     ```
-13.
+13. 组合 
+
+    * 多用组合，少用继承
+
+    ```java
+    public class SoccerPlayer {
+        private String name;
+        private Soccer soccer; //引用
+    }
+    public class Soccer {
+        private String soccerName;
+    }
+    ```
+
+    * 不具备多态
+    * 松耦合，运行期绑定（继承相反）
+14. 代理
+15. static和final
+
+    * 修饰成员变量和方法
+    * 修饰变量=类变量 生命周期和类一样
+    * 修饰方法=静态方法 **类名.方法名** （没有this关键字）（不能访问非静态成员变量和方法）
+    * 静态代码块随类加载
+
+    | final |                    |
+    | ----- | ------------------ |
+    | 修饰类   | 不能继承，类中的方法隐式为final |
+    | 修饰方法  | 子类不能重写             |
+    | 修饰变量  | 修饰基本数据类型，值不能被修改    |
+    |       | 修饰引用类型，不能指向另一个对象   |
+16. 接口和抽象类
