--- a/source/_posts/基础巩固第一天-1.md
+++ b/source/_posts/基础巩固第一天-1.md
@@ -2,6 +2,8 @@
 title: 基础巩固第一天
 date: 2021-12-15T06:05:52.572Z
 ---
+
+
 Java的特点
 
 * 可以不用严格按照顺序执行每个动作
@@ -194,6 +196,8 @@ Java的特点
 14. 代理
 15. static和final
 
+    > static
+
     * 修饰成员变量和方法
     * 修饰变量=类变量 生命周期和类一样
     * 修饰方法=静态方法 **类名.方法名** （没有this关键字）（不能访问非静态成员变量和方法）
@@ -206,3 +210,18 @@ Java的特点
     | 修饰变量  | 修饰基本数据类型，值不能被修改    |
     |       | 修饰引用类型，不能指向另一个对象   |
 16. 接口和抽象类
+
+    > 接口 interface
+
+    * 是 一个完全抽象的类，只定义方法，不实现
+    * 两种访问修饰符`public`和`default`
+    * 被实现`implements，` 一个接口可以多实现
+    * 不能实例化，不能有任何构造方法
+    * 接口的实现必须实现全部方法
+
+    > 抽象类 abstract
+
+    * 抽象能力弱于接口
+    * 有`抽象方法`的类就是抽象类
+    * 可以有实现方法，**构造方法、抽象方法、普通属性、方法、静态属性和静态方法**
+    * 抽象类和接口一样不能实例化，实例化只能实例具体的类
