--- a/source/_posts/基础巩固第一天-1.md
+++ b/source/_posts/基础巩固第一天-1.md
@@ -2,7 +2,7 @@
 title: 基础巩固第一天
 date: 2021-12-15T06:05:52.572Z
 ---
-Java的特点
+1. Java的特点
 
 * 可以不用严格按照顺序执行每个动作
 * 不用手动管理对象的生命周期
@@ -13,8 +13,8 @@ Java的特点
 * JTL动态编译器在运行时将热点代码编译机器码，效率高
 * 健壮性：强类型机制、异常处理、垃圾自动回收
 
-1. jdk：开发工具包，jre：运行环境；jdk功能比jre全的多；
-2. 数据类型
+2. jdk：开发工具包，jre：运行环境；jdk功能比jre全的多；
+3. 数据类型
 
    | 数据类型    | 字节  | 内存     | 默认值    |
    | ------- | --- | ------ | ------ |
