Update Post “基础巩固第一天-1”

--- a/source/_posts/基础巩固第一天-1.md
+++ b/source/_posts/基础巩固第一天-1.md
@@ -198,6 +198,33 @@ date: 2021-12-15T06:05:52.572Z
     * 不具备多态
     * 松耦合，运行期绑定（继承相反）
 14. 代理
+
+    ```java
+    class Member {
+        public static void main(String[] args) {
+            Proxy proxy = new Proxy();
+            proxy.buy(15);
+        }
+    }
+
+    class Proxy{
+        private Shop shop = new Shop();
+        public void buy(int money){
+            System.out.println("一个药物15块");
+            shop.sale(money - 5);
+        }
+    }
+
+    class Shop{
+        public void sale(int money){
+            System.out.println("一个药物10块");
+        }
+    }
+    ```
+
+    > 组合：如果只是需要使用父类的功能，可以选用组合。\
+    > 继承：如果想要向上转型为父类，使用多态，就使用继承。\
+    > 代理：如果想使用父类方法，但是又不想暴露全部接口，使用代理。
 15. static和final
 
     > static
