Update Post “基础巩固第二天”

--- a/source/_posts/基础巩固第二天.md
+++ b/source/_posts/基础巩固第二天.md
@@ -41,4 +41,29 @@ date: 2021-12-16T03:47:59.944Z
            System.out.println("空指针异常");
          }
          ```
-      3.
+      3. 数组长度为负异常
+
+         ```java
+         try{
+           int [] j = new int[-1];
+         }catch(NegativeArraySizeException e){
+           System.out.println("数组长度为负异常");
+         }
+         ```
+      4. 类型转换异常
+
+         ```
+         class Father{
+           class Son1 extends Father{
+           }
+           class Son2 extends Father{
+           }
+           
+           try{
+             Father son1 = new Son1();
+             Son2 son2 (Son2)son1;
+           }catch(ClassCastException e){
+             System.out.println("类型转换异常");
+           }
+         }
+         ```
