Update Post “基础巩固第二天”

--- a/source/_posts/基础巩固第二天.md
+++ b/source/_posts/基础巩固第二天.md
@@ -67,3 +67,14 @@ date: 2021-12-16T03:47:59.944Z
            }
          }
          ```
+      5. 非法参数异常
+      6. 非法状态异常
+   4. UncheckedException
+
+      1. NoSuchFieldException
+      2. NoSuchMethodException
+      3. IllegalAccessException
+      4. ClassNotFoundException
+   5. Error 程序无法处理的错误
+   6.
+   7.
