--- a/source/_posts/基础巩固第二天.md
+++ b/source/_posts/基础巩固第二天.md
@@ -76,5 +76,19 @@ date: 2021-12-16T03:47:59.944Z
       3. IllegalAccessException
       4. ClassNotFoundException
    5. Error 程序无法处理的错误
-   6.
-   7.
+
+      > 表示代码运行时JVM出现的问题，错误是不可检查的
+
+      1. OutOfMemoryError
+      2. StackOverflowError
+      3. Java内存模型jdk1.7
+
+         ![](images/内存模型.png)
+
+         >  只有程序计数器不会`OutOfMemoryError` ，计数器控制着指令的分支、循环、跳转、异常处理和线程恢复，并且每个线程私有。
+         >
+         > 线程私有：各线程之间互不影响，独立存储的内存区域。
+         >
+         > 本地方法栈和虚拟机栈：如果线程请求的栈深度大于虚拟机栈允许的深度，将`StackOverflowError`；如果虚拟机动态扩展无法申请到足够内存，将`OutOfMemoryError ` 
+         >
+         > 堆：Java堆物理上不连续，逻辑上连续；如果没有内存进行实例分配，无法扩展时，将`OutOfMemoryError `
