Update Post “基础巩固第二天”

--- a/source/_posts/基础巩固第二天.md
+++ b/source/_posts/基础巩固第二天.md
@@ -92,3 +92,4 @@ date: 2021-12-16T03:47:59.944Z
          > 本地方法栈和虚拟机栈：如果线程请求的栈深度大于虚拟机栈允许的深度，将`StackOverflowError`；如果虚拟机动态扩展无法申请到足够内存，将`OutOfMemoryError` 
          >
          > 堆：Java堆物理上不连续，逻辑上连续；如果没有内存进行实例分配，无法扩展时，将`OutOfMemoryError`
+2. 内部类
