Update Post “基础巩固第二天”

--- a/source/_posts/基础巩固第二天.md
+++ b/source/_posts/基础巩固第二天.md
@@ -142,8 +142,6 @@ date: 2021-12-16T03:47:59.944Z
           }
       }
       ```
-
-
    2. 成员内部类：定义在作用域内部的类
 
       ```java
@@ -174,23 +172,26 @@ date: 2021-12-16T03:47:59.944Z
       ```java
       //匿名内部类
       class OutClass2{
-          interface InnerClass{
-              int getNumber();
-          }
+         interface InnerClass{
+             int getNumber();
+         }
 
-          public InnerClass getInner(){
-              return new InnerClass(){
-                  int num = 3;
-                  public int getNumber(){
-                      return num;
-                  }
-              };
-          }
+         public InnerClass getInner(){
+             return new InnerClass(){
+                 int num = 3;
+                 public int getNumber(){
+                     return num;
+                 }
+             };
+         }
 
-          public static void main(String[] args) {
-              OutClass2 outClass2 = new OutClass2();
-              InnerClass inner = outClass2.getInner();
-              System.out.println(inner.getNumber());
-          }
+         public static void main(String[] args) {
+             OutClass2 outClass2 = new OutClass2();
+             InnerClass inner = outClass2.getInner();
+             System.out.println(inner.getNumber());
+         }
       }
       ```
+3. 集合
+
+   1.Itre
