Update Post “基础巩固第二天”

--- a/source/_posts/基础巩固第二天.md
+++ b/source/_posts/基础巩固第二天.md
@@ -229,12 +229,22 @@ date: 2021-12-16T03:47:59.944Z
    2. 顶级接口
 
       * Collection是顶级接口
-      * List继承于`Collection`，是`ArrayList`、`LinkedList`的父类
-      * Set也继承于`Collection`，对add、equals、hashCode有额外的标准
+      * List继承于`Collection`，是`ArrayList`、`LinkedList`的父类，有序
+      * Set也继承于`Collection`，对add、equals、hashCode有额外的标准，无序
       * Queue和前两个是三大接口，处理之前保持元素的访问次序，有额外的插入、读取、检查操作
       * Map是支持键值对，不能重复key。
    3. ArrayList
+
+      > 数组，查找块，因为连续的内存空间，方便寻址，但删除插入慢，因为需要数据发生迁移。线程不安全，效率高。
+      >
+      > 初始容量10，不够时1.5倍扩容
+      >
+      > 删除、添加：除末尾外需要整体迁移
+      >
+      > 修改：先定位-查找-ArrayList
    4. LinkedList
+
+      > 查找慢，因为需要通过指针一个个寻址，但删除、插入快，只要改变前后节点的指针指向即可。
    5. HashSet
    6. TreeSet
    7. HashMap
