--- a/source/_posts/基础巩固第二天.md
+++ b/source/_posts/基础巩固第二天.md
@@ -242,9 +242,47 @@ date: 2021-12-16T03:47:59.944Z
       > 删除、添加：除末尾外需要整体迁移
       >
       > 修改：先定位-查找-ArrayList
+      >
+      > ```java
+      > ArrayList<Integer> ints1 = new ArrayList<>();
+      >         long add1 = System.currentTimeMillis();
+      >         for(int i=0;i<10000000;i++){
+      >             ints1.add(i);
+      >         }
+      >         long add2 = System.currentTimeMillis();
+      >         System.out.println("ArrayList添加用时"+(add2-add1));   //1960
+      >         for(int i=10;i<1000;i++) {
+      >             ints1.add(i, 333);
+      >         }
+      >         long add3 = System.currentTimeMillis();
+      >         System.out.println("ArrayList插入用时"+(add3-add2));   //5982
+      >         int i1 = ints1.indexOf(333333);
+      >         System.out.println(i1);
+      >         long find1 = System.currentTimeMillis();
+      >         System.out.println("ArrayList查找用时"+(find1-add3));  //8
+      > ```
    4. LinkedList
 
       > 查找慢，因为需要通过指针一个个寻址，但删除、插入快，只要改变前后节点的指针指向即可。
+      >
+      > ```java
+      > LinkedList<Integer> ints2 = new LinkedList<>();
+      >         long ladd1 = System.currentTimeMillis();
+      >         for(int i=0;i<10000000;i++){
+      >             ints2.add(i);
+      >         }
+      >         long ladd2 = System.currentTimeMillis();
+      >         System.out.println("LinkedList添加用时"+(ladd2-ladd1));  //5761
+      >         for (int i=10;i<1000;i++){
+      >             ints2.add(i,333);
+      >         }
+      >         long ladd3 = System.currentTimeMillis();
+      >         System.out.println("LinkedList插入用时"+(ladd2-ladd1));  //5761
+      >         int li1 = ints2.indexOf(333333);
+      >         System.out.println(li1);
+      >         long lfind1 = System.currentTimeMillis();
+      >         System.out.println("LinkedList查找用时"+(lfind1-ladd3)); //11
+      > ```
    5. HashSet
    6. TreeSet
    7. HashMap
