Update Post “基础巩固第二天”

--- a/source/_posts/基础巩固第二天.md
+++ b/source/_posts/基础巩固第二天.md
@@ -245,50 +245,61 @@ date: 2021-12-16T03:47:59.944Z
       >
       > ```java
       > ArrayList<Integer> ints1 = new ArrayList<>();
-      >         long add1 = System.currentTimeMillis();
-      >         for(int i=0;i<10000000;i++){
-      >             ints1.add(i);
-      >         }
-      >         long add2 = System.currentTimeMillis();
-      >         System.out.println("ArrayList添加用时"+(add2-add1));   //1960
-      >         for(int i=10;i<1000;i++) {
-      >             ints1.add(i, 333);
-      >         }
-      >         long add3 = System.currentTimeMillis();
-      >         System.out.println("ArrayList插入用时"+(add3-add2));   //5982
-      >         int i1 = ints1.indexOf(333333);
-      >         System.out.println(i1);
-      >         long find1 = System.currentTimeMillis();
-      >         System.out.println("ArrayList查找用时"+(find1-add3));  //8
+      > long add1 = System.currentTimeMillis();
+      > for(int i=0;i<10000000;i++){
+      >     ints1.add(i);
+      > }
+      > long add2 = System.currentTimeMillis();
+      > System.out.println("ArrayList添加用时"+(add2-add1));   //1960
+      > for(int i=10;i<1000;i++) {
+      >     ints1.add(i, 333);
+      > }
+      > long add3 = System.currentTimeMillis();
+      > System.out.println("ArrayList插入用时"+(add3-add2));   //5982
+      > int i1 = ints1.indexOf(333333);
+      > System.out.println(i1);
+      > long find1 = System.currentTimeMillis();
+      > System.out.println("ArrayList查找用时"+(find1-add3));  //8
       > ```
+      >
+      >
    4. LinkedList
 
       > 查找慢，因为需要通过指针一个个寻址，但删除、插入快，只要改变前后节点的指针指向即可。
       >
       > ```java
       > LinkedList<Integer> ints2 = new LinkedList<>();
-      >         long ladd1 = System.currentTimeMillis();
-      >         for(int i=0;i<10000000;i++){
-      >             ints2.add(i);
-      >         }
-      >         long ladd2 = System.currentTimeMillis();
-      >         System.out.println("LinkedList添加用时"+(ladd2-ladd1));  //5761
-      >         for (int i=10;i<1000;i++){
-      >             ints2.add(i,333);
-      >         }
-      >         long ladd3 = System.currentTimeMillis();
-      >         System.out.println("LinkedList插入用时"+(ladd2-ladd1));  //5761
-      >         int li1 = ints2.indexOf(333333);
-      >         System.out.println(li1);
-      >         long lfind1 = System.currentTimeMillis();
-      >         System.out.println("LinkedList查找用时"+(lfind1-ladd3)); //11
+      > long ladd1 = System.currentTimeMillis();
+      > for(int i=0;i<10000000;i++){
+      >     ints2.add(i);
+      > }
+      > long ladd2 = System.currentTimeMillis();
+      > System.out.println("LinkedList添加用时"+(ladd2-ladd1));  //5761
+      > for (int i=10;i<1000;i++){
+      >     ints2.add(i,333);
+      > }
+      > long ladd3 = System.currentTimeMillis();
+      > System.out.println("LinkedList插入用时"+(ladd2-ladd1));  //5761
+      > int li1 = ints2.indexOf(333333);
+      > System.out.println(li1);
+      > long lfind1 = System.currentTimeMillis();
+      > System.out.println("LinkedList查找用时"+(lfind1-ladd3)); //11
       > ```
    5. HashSet
+
+      >  底层采用HashMap实现存储，其值作为HashMap的key
    6. TreeSet
    7. HashMap
-   8. TreeMap
-   9. Vector
-   10. Hashtable
-   11. ConcurrentHashMap
-   12. Stack
-   13. CopyOnWriteArrayList
+
+      > 初始容量是16，建议修改初始化容量，提高性能
+      >
+      > 达到容量0.75，扩容为2倍
+   8. LinkedHashMap
+
+      > 链表+散列表的结构，底层采用Linked双向链表来保存节点的访问顺序，保证了有序性
+   9. TreeMap
+   10. Vector
+   11. Hashtable
+   12. ConcurrentHashMap
+   13. Stack
+   14. CopyOnWriteArrayList
