Update Post “基础巩固第二天”

--- a/source/_posts/基础巩固第二天.md
+++ b/source/_posts/基础巩固第二天.md
@@ -265,7 +265,7 @@ date: 2021-12-16T03:47:59.944Z
       >
    4. LinkedList
 
-      > 查找慢，因为需要通过指针一个个寻址，但删除、插入快，只要改变前后节点的指针指向即可。
+      > 查找慢，因为需要通过指针一个个寻址，但删除、插入快，只要改变前后节点的指针指向即可；不是连续内存空间
       >
       > ```java
       > LinkedList<Integer> ints2 = new LinkedList<>();
@@ -300,6 +300,10 @@ date: 2021-12-16T03:47:59.944Z
    9. TreeMap
    10. Vector
    11. Hashtable
+
+       > 线程安全，但
    12. ConcurrentHashMap
+
+       > 兼顾了线程安全和效率的问题
    13. Stack
    14. CopyOnWriteArrayList
