Update Post “基础巩固第二天”

--- a/source/_posts/基础巩固第二天.md
+++ b/source/_posts/基础巩固第二天.md
@@ -261,8 +261,6 @@ date: 2021-12-16T03:47:59.944Z
       > long find1 = System.currentTimeMillis();
       > System.out.println("ArrayList查找用时"+(find1-add3));  //8
       > ```
-      >
-      >
    4. LinkedList
 
       > 查找慢，因为需要通过指针一个个寻址，但删除、插入快，只要改变前后节点的指针指向即可；不是连续内存空间
@@ -294,14 +292,18 @@ date: 2021-12-16T03:47:59.944Z
       > 初始容量是16，建议修改初始化容量，提高性能
       >
       > 达到容量0.75，扩容为2倍
+      >
+      > 线程不安全，效率高
    8. LinkedHashMap
 
       > 链表+散列表的结构，底层采用Linked双向链表来保存节点的访问顺序，保证了有序性
    9. TreeMap
    10. Vector
+
+       > 线程安全，效率低
    11. Hashtable
 
-       > 线程安全，但
+       > 线程安全，但效率低
    12. ConcurrentHashMap
 
        > 兼顾了线程安全和效率的问题
