Update Post “基础巩固第二天”

--- a/source/_posts/基础巩固第二天.md
+++ b/source/_posts/基础巩固第二天.md
@@ -287,6 +287,8 @@ date: 2021-12-16T03:47:59.944Z
 
       >  底层采用HashMap实现存储，其值作为HashMap的key
    6. TreeSet
+
+      > 需要的
    7. HashMap
 
       > 初始容量是16，建议修改初始化容量，提高性能
