Update Post “基础巩固第二天”

--- a/source/_posts/基础巩固第二天.md
+++ b/source/_posts/基础巩固第二天.md
@@ -288,7 +288,7 @@ date: 2021-12-16T03:47:59.944Z
       >  底层采用HashMap实现存储，其值作为HashMap的key
    6. TreeSet
 
-      > 需要的
+      > 需要的结果去重、排序时
    7. HashMap
 
       > 初始容量是16，建议修改初始化容量，提高性能
@@ -300,6 +300,8 @@ date: 2021-12-16T03:47:59.944Z
 
       > 链表+散列表的结构，底层采用Linked双向链表来保存节点的访问顺序，保证了有序性
    9. TreeMap
+
+      > 需要的结果去重、排序时
    10. Vector
 
        > 线程安全，效率低
@@ -310,4 +312,8 @@ date: 2021-12-16T03:47:59.944Z
 
        > 兼顾了线程安全和效率的问题
    13. Stack
+
+       > 先进后出，堆栈
    14. CopyOnWriteArrayList
+
+       > 读大于写时
