Update Post “基础巩固第二天”

--- a/source/_posts/基础巩固第二天.md
+++ b/source/_posts/基础巩固第二天.md
@@ -78,7 +78,13 @@ date: 2021-12-16T03:47:59.944Z
          ```
       6. 数字格式异常
 
-
+         ```java
+         try{
+           Integer integer = new Integer("a12");
+         }catch(NumberFormatException e){
+           System.out.println("数字格式异常");
+         }
+         ```
       7. 非法参数异常
 
          ```java
