Update Post “基础巩固第二天”

--- a/source/_posts/基础巩固第二天.md
+++ b/source/_posts/基础巩固第二天.md
@@ -97,10 +97,13 @@ date: 2021-12-16T03:47:59.944Z
       8. 非法状态异常
    4. UncheckedException
 
-      1. NoSuchFieldException
-      2. NoSuchMethodException
-      3. IllegalAccessException
-      4. ClassNotFoundException
+      1. IOException
+      2. SQLException
+      3. FileNotFoundException
+      4. NoSuchFieldException
+      5. NoSuchMethodException
+      6. IllegalAccessException
+      7. ClassNotFoundException
    5. Error 程序无法处理的错误
 
       > 表示代码运行时JVM出现的问题，错误是不可检查的
