Update Post “基础巩固第二天”

--- a/source/_posts/基础巩固第二天.md
+++ b/source/_posts/基础巩固第二天.md
@@ -100,6 +100,14 @@ date: 2021-12-16T03:47:59.944Z
       1. IOException
       2. SQLException
       3. FileNotFoundException
+
+         ```java
+         try{
+           FileWriter fileWriter = new FileWriter("/he.jpg");
+         }catch(FileNotFoundException e){
+           System.out.println("文件未找到异常");
+         }
+         ```
       4. NoSuchFieldException
       5. NoSuchMethodException
       6. IllegalAccessException
