Update Post “基础巩固第二天”

--- a/source/_posts/基础巩固第二天.md
+++ b/source/_posts/基础巩固第二天.md
@@ -98,7 +98,17 @@ date: 2021-12-16T03:47:59.944Z
    4. UncheckedException
 
       1. IOException
+
+         ```java
+         try{
+           FileWriter fileWriter = new FileWriter("/he.jpg");
+         }catch(IOException e){
+           System.out.println("文件未找到异常");
+         }
+         ```
       2. SQLException
+
+         > 当使用 JDBC 与数据源进行交互的时候遇见错误的时候，
       3. FileNotFoundException
 
          ```java
@@ -109,9 +119,35 @@ date: 2021-12-16T03:47:59.944Z
          }
          ```
       4. NoSuchFieldException
+
+         ```java
+         try{
+           Class<?> clazz = Class.forName("Two");
+           clazz.getField("name");
+         }catch(NoSuchFieldException e){
+           System.out.println("没有属性异常");
+         }
+         ```
       5. NoSuchMethodException
+
+         ```java
+         try{
+           Class<?> clazz = Class.forName("Two");
+           clazz.getMethod("getName");
+         }catch(NoSuchMethodException e){
+           System.out.println("没有方法异常");
+         }
+         ```
       6. IllegalAccessException
       7. ClassNotFoundException
+
+         ```java
+         try{
+           Class.forName("com.baidiu.d");
+         }catch(ClassNotFoundException e){
+           System.out.println("类未找到异常");
+         }
+         ```
    5. Error 程序无法处理的错误
 
       > 表示代码运行时JVM出现的问题，错误是不可检查的
