Update Post “基础巩固第二天”

--- a/source/_posts/基础巩固第二天.md
+++ b/source/_posts/基础巩固第二天.md
@@ -95,7 +95,7 @@ date: 2021-12-16T03:47:59.944Z
          }
          ```
       8. 非法状态异常
-   4. UncheckedException
+   4. 非运行时异常
 
       1. IOException
 
@@ -139,6 +139,18 @@ date: 2021-12-16T03:47:59.944Z
          }
          ```
       6. IllegalAccessException
+
+         ```
+         try{
+           Class<?> clazz = Class.forName("Two");
+           Field field = clazz.getDeclaredField("id");
+
+           //field.setAccessible(true); 打开就可以不报错，修改私有
+           field.set("1","1");
+         }catch(IllegalArgumentException e){
+           System.out.println("没有访问权限的异常");
+         }
+         ```
       7. ClassNotFoundException
 
          ```java
