Update Post “基础巩固第二天”

--- a/source/_posts/基础巩固第二天.md
+++ b/source/_posts/基础巩固第二天.md
@@ -95,6 +95,22 @@ date: 2021-12-16T03:47:59.944Z
          }
          ```
       8. 非法状态异常
+
+         ```java
+         try{
+           List linkedList = new LinkedList();
+           linkedList.add("he");
+           linkedList.add("llo");
+
+           ListIterator iterator = linkedList.listIterator();
+           iterator.next();
+           iterator.remove();  //list处于不稳定状态，
+           iterator.set("new");
+           System.out.println(linkedList);
+         }catch(IllegalStateException e){
+           System.out.println("非法状态异常");
+         }
+         ```
    4. 非运行时异常
 
       1. IOException
@@ -140,14 +156,14 @@ date: 2021-12-16T03:47:59.944Z
          ```
       6. IllegalAccessException
 
-         ```
+         ```java
          try{
            Class<?> clazz = Class.forName("Two");
            Field field = clazz.getDeclaredField("id");
 
            //field.setAccessible(true); 打开就可以不报错，修改私有
            field.set("1","1");
-         }catch(IllegalArgumentException e){
+         }catch(IllegalAccessException e){
            System.out.println("没有访问权限的异常");
          }
          ```
