Update Post “基础巩固第二天”

--- a/source/_posts/基础巩固第二天.md
+++ b/source/_posts/基础巩固第二天.md
@@ -303,7 +303,7 @@ date: 2021-12-16T03:47:59.944Z
       ```
 3. 集合
 
-   1. Iterable接口
+   1. Iterable接口     （移除、添加元素涉及到`fail-fast`机制）
 
       ```java
       class CollectionShow2{
@@ -344,7 +344,7 @@ date: 2021-12-16T03:47:59.944Z
       * Set也继承于`Collection`，对add、equals、hashCode有额外的标准，无序
       * Queue和前两个是三大接口，处理之前保持元素的访问次序，有额外的插入、读取、检查操作
       * Map是支持键值对，不能重复key。
-   3. ArrayList
+   3. ArrayList  （具有`fail-fast`机制）
 
       > 数组，查找块，因为连续的内存空间，方便寻址，但删除插入慢，因为需要数据发生迁移。线程不安全，效率高。
       >
@@ -400,7 +400,7 @@ date: 2021-12-16T03:47:59.944Z
    6. TreeSet
 
       > 需要的结果去重、排序时
-   7. HashMap
+   7. HashMap （具有`fail-fast`机制）
 
       > 初始容量是16，建议修改初始化容量，提高性能
       >
@@ -416,9 +416,9 @@ date: 2021-12-16T03:47:59.944Z
    10. Vector
 
        > 线程安全，效率低
-   11. Hashtable
+   11. Hashtable （具有`fail-fast`机制）
 
-       > 线程安全，但效率低
+       > 线程安全，但效率低，推荐ConcurrentHashMap
    12. ConcurrentHashMap
 
        > 兼顾了线程安全和效率的问题
@@ -430,3 +430,6 @@ date: 2021-12-16T03:47:59.944Z
        > 读大于写时
 
        `🔗：` <https://www.jianshu.com/p/9b6a4d0b94ac>
+4. fail-fast机制
+
+   `🔗：` <https://www.cnblogs.com/54chensongxia/p/12470446.html>
