Update Post “集合专题”

--- a/source/_posts/集合专题.md
+++ b/source/_posts/集合专题.md
@@ -2,4 +2,65 @@
 title: 集合专题
 date: 2021-12-16T09:52:32.480Z
 ---
-1
+1. ArrayList和LinkedList的常规区别
+
+   * ArrayList，数组，查找快，因为是连续的内存空间，方便寻址，但删除，插入慢，因为需要发生数据迁移
+   * LinkedList，双向链表，查找慢，因为需要通过指针一个个寻找，但删除，插入块，因为只要改变前后节点的指针指向即可。
+2. ArrayList和LinkedList细节区别
+
+   * 查找：
+
+     ArrayList -> a,c,b,d
+
+     LinkedList -> a,c,b,d
+
+     > 查找第2个元素       ArrayList>LinkedList
+
+     ArrayList连续的内存空间，可计算的偏移量
+
+     LinkedList不连续，无法计算，一个个往下找
+
+     > 查找b在哪    
+
+     都是遍历，只能一个个比较
+   * 插入
+
+     > 中间的位置插入
+
+     ArrayList连续的内存空间，需要数据迁移
+
+     LinkedList只需改变前后节点的指针指向
+
+     > 末尾的位置插入
+
+     ArrayList 可计算
+
+     LinkedList 有两个指针，指向头部，一个来指向尾部
+   * 确定要存储1000 个对象的信息
+
+     ArrayList 初始化空间大小1000，避免扩容
+
+     LinkedList 劣势，因为还有存储前后指针2000个
+3. ArrayList及扩容
+
+   * 底层是数组 连续的内存空间 长度固定
+
+     > 扩容
+
+   1. 创建一个新数组，长度是原数组的1.5倍
+   2. 将原数组的数据迁移到新数组
+4. 双向链表的插入
+
+   ![](images/双向链表.png)
+5. HashSet存储原理
+
+   * 底层采用HashMap来实现存储，其值作为HashMap的key
+   * 采用hash算法，解决唯一性
+   * 哈希表是一个数组，而且数组的元素是链表
+
+     ![](images/hashset1.7原理.png)
+   * 上图是jdk1.7，jdk1.8做了优化，随着元素不断添加，链表可能会越来越长，会优化红黑树
+6. LinkedHashMap和HashMap的区别
+7. HashTable、HashMap和ConcurrentHashMap的区别
+8. ArrayList和Vector的区别
+9. Stack
