Update Post “集合专题”

--- a/source/_posts/集合专题.md
+++ b/source/_posts/集合专题.md
@@ -62,5 +62,17 @@ date: 2021-12-16T09:52:32.480Z
    * 上图是jdk1.7，jdk1.8做了优化，随着元素不断添加，链表可能会越来越长，会优化红黑树
 6. LinkedHashMap和HashMap的区别
 7. HashTable、HashMap和ConcurrentHashMap的区别
+
+   > HashTable
+
+   * 线程安全的对象，内部有上锁的控制synchronized  （put同时get会阻塞）
+
+   > HashMap
+
+   * 线程不安全的对象，效率高 （put同时get不会阻塞）（多线程同时操作一HashMap，线程不安全，甚至死锁）
+
+   > ConcurrentHashMap
+
+   ![](images/concurrenthashmap.png)
 8. ArrayList和Vector的区别
 9. Stack
