--- a/source/_posts/集合专题.md
+++ b/source/_posts/集合专题.md
@@ -43,7 +43,7 @@ date: 2021-12-16T09:52:32.480Z
      LinkedList 劣势，因为还有存储前后指针2000个
 3. ArrayList及扩容
 
-   * 底层是数组 连续的内存空间 长度固定
+   * 底层是数组 连续的内存空间 长度固定10
 
      > 扩容
 
@@ -74,5 +74,16 @@ date: 2021-12-16T09:52:32.480Z
    > ConcurrentHashMap
 
    ![](images/concurrenthashmap.png)
+
+   总结：优先选择HashMap，如果不是多线程访问同一个资源，局部变量，不是全局变量；是全局变量，多个线程共享访问选择ConcurrentHashMap；
 8. ArrayList和Vector的区别
+
+   > ArrayList:线程不安全，效率高，常用
+   >
+   > Vector：线程安全，效率低， 源码方法有synchronized
 9. Stack
+
+   * 数组结构
+   * 先进后出原则
+   * 出栈：取末尾的元素                 arr\[arr.length-1]
+   * 入栈：默认加到末尾，效率高  arr\[index++] = newObject;
