Update Post “集合专题”

--- a/source/_posts/集合专题.md
+++ b/source/_posts/集合专题.md
@@ -61,6 +61,20 @@ date: 2021-12-16T09:52:32.480Z
      ![](images/hashset1.7原理.png)
    * 上图是jdk1.7，jdk1.8做了优化，随着元素不断添加，链表可能会越来越长，会优化红黑树
 6. LinkedHashMap和HashMap的区别
+
+   > HashMap
+
+   * 初始大小16，建议初始化大小，减少扩容，提高性能
+   * 装置因子最大0.75,达到会容量扩容原来的2倍
+   * 底层采用链表法解决冲突。但链表过长会影响性能
+   * 于是JDK1.8对HashMap做了进一步优化，引入红黑树
+   * 当红黑树的节点数量小于6时，会将红黑树转换为链表
+   * 因为在数据量较小的情况下，红黑树要维护自身平衡，比链表性能没有优势
+
+   > LinkedHashMap
+
+   * 链表+散列表的结构
+   * 底层采用了Linked双向链表来保存节点的访问顺序，所有保证了有序性
 7. HashTable、HashMap和ConcurrentHashMap的区别
 
    > HashTable
