--- a/source/_posts/基础巩固第二天.md
+++ b/source/_posts/基础巩固第二天.md
@@ -433,3 +433,58 @@ date: 2021-12-16T03:47:59.944Z
 4. fail-fast机制
 
    `🔗：` <https://www.cnblogs.com/54chensongxia/p/12470446.html>
+5. Collections工具包和Arrays工具包
+
+   ```java
+   public static void collcetionsShow(){
+           ArrayList list = new ArrayList();
+           list.add(4);
+           list.add(1);
+           list.add(3);
+
+
+           Collections.sort(list);
+           System.out.println(list);
+           System.out.println(Collections.binarySearch(list,3));
+           Collections.reverse(list);
+           System.out.println(list);
+           System.out.println(Collections.max(list));
+           System.out.println(Collections.min(list));
+
+   //        Collections.synchronizedMap();
+   //        Collections.synchronizedList();
+   //        Collections.synchronizedSet();
+   //        Collections.synchronizedCollection();
+     }
+   ```
+
+   ```java
+   public static void arraysShow(){
+           int[] arr = {1,2,3,4,5,4,3,2,1};
+
+           int s = Arrays.binarySearch(arr,5);
+           System.out.println(s);
+
+
+           int[] newarr = Arrays.copyOf(arr, 4);
+           System.out.println(newarr.length);
+
+           int[] arrrange = Arrays.copyOfRange(arr, 3, 4);
+           System.out.println(Arrays.toString(arrrange));
+
+           Arrays.sort(arr);
+           System.out.println(Arrays.toString(arr));
+
+
+           Arrays.fill(newarr,9);
+           System.out.println(Arrays.toString(newarr));
+
+           int oldhash = Arrays.hashCode(arr);
+           int newhash = Arrays.hashCode(newarr);
+           System.out.println(oldhash);
+           System.out.println(newhash);
+
+
+           System.out.println(arr.length);
+       }
+   ```
