Update Post “基础巩固第三天”

--- a/source/_posts/基础巩固第三天.md
+++ b/source/_posts/基础巩固第三天.md
@@ -2,4 +2,73 @@
 title: 基础巩固第三天
 date: 2021-12-17T05:47:23.046Z
 ---
-1.
+1. 泛型
+
+   * 参数化类型，限制添加进集合的类型
+
+   1. 泛型表示类
+
+      ```java
+      class FanXing<T,E>{
+          private T value;
+          private E age;
+
+          public FanXing(T value,E age){
+              this.value = value;
+              this.age = age;
+          }
+        }
+      ```
+   2. 泛型表示接口
+
+      ```java
+      interface FanXing2<T>{
+          public  T next();
+      }
+
+      class FJK implements FanXing2<String> {
+          @Override
+          public String next() {
+              return "hello";
+          }
+      }
+      ```
+   3. 泛型表示方法
+
+      ```java
+      class FanXing3{
+          public <T> void f(T x){
+              System.out.println(x.getClass().getName());
+          }
+      }
+
+
+      FanXing3 fanXing3 = new FanXing3();
+      fanXing3.f(32342342.42434234242);//返回填入的类型
+      ```
+   4. 泛型通配符
+
+      ```java
+      class TPFF{
+          public static void main(String[] args) {
+              ArrayList<String> names = new ArrayList<>();
+              ArrayList<Integer> ages = new ArrayList<>();
+              ArrayList<Number> numbers = new ArrayList<>();
+
+              names.add("zs");
+              ages.add(16);
+              numbers.add(200);
+
+      //        generic(names);
+              generic(ages);
+              generic(numbers);
+          }
+
+          public static  void generic(List<? super Integer> datas){
+              System.out.println(datas.get(0));
+          }
+        
+        //<? extend T>  上界通配符    
+        //<? super T>   下界通配符
+      }
+      ```
