--- a/source/_posts/基础巩固第三天.md
+++ b/source/_posts/基础巩固第三天.md
@@ -72,3 +72,27 @@ date: 2021-12-17T05:47:23.046Z
         //<? super T>   下界通配符
       }
       ```
+2. 反射
+
+   |||
+   |----|----|
+   |获取类实例的方式|Class student = Class.forName(java.lang.Thread)|
+   ||Class student = Thread.class|
+   ||Class student = thread.getClass()|
+   |获取对象所有公有属性|Field[] fields = student.getFields();|
+   |属性不包括继承|Field[] fields = student.getDeclaredFields();|
+   |获取对象所有公有方法|Method[] methods = student.getMethods();|
+   |方法不包括继承|Method[] methods = student.getDeclaredMethods();|
+   |获取对象所有公有构造方法|Constructor[] constructors = student.getConstructors();|
+   |获取对象所有构造方法|Constructor[] constructors = student.getDeclaredConstructors();|
+   |实例化默认构造方法，调用set赋值|Student student1 = (Student) student.newInstance()；student1.setAddress("石家庄");|
+   |使用构造函数赋值| Constructor constructor = student.getConstructor(Integer.class, String.class);Student student2 = (Student) constructor.newInstance( 12, "d");|
+   |||
+   |||
+   |||
+   |||
+   |||
+   |||
+   |||
+   |||
+   |||
