Update Post “基础巩固第三天”

--- a/source/_posts/基础巩固第三天.md
+++ b/source/_posts/基础巩固第三天.md
@@ -94,3 +94,75 @@ date: 2021-12-17T05:47:23.046Z
    使用的是双亲委派模型来搜索加载类的，是双亲委派模型。
 
    ![](images/双亲委派模型.png)
+4. 枚举
+
+   ```java
+   enum Family{
+      FATHER("f",11),
+      MOTHER("m",22),
+      SISTER("s",33),
+      ME("m",44);
+
+      private String name;
+      private Integer age;
+
+      Family(String name,Integer age){
+          this.name =name;
+          this.age = age;
+      }
+
+       public String getName() {
+           return name;
+       }
+
+       public void setName(String name) {
+           this.name = name;
+       }
+
+       public void setAge(Integer age) {
+           this.age = age;
+       }
+
+       public Integer getAge() {
+           return age;
+       }
+
+       public String toString(){
+          return "NAME:"+this.name +",AGE:"+ this.age;
+       }
+
+       public static void main(String[] args) throws ClassNotFoundException {
+
+           Family[] values = Family.values();        //顺序的值
+           for (Family family : values){
+               System.out.println(family.ordinal());  //顺序
+               System.out.println(family.toString()); 
+               System.out.println(family.getName());
+           }
+
+       }
+   }
+   ```
+
+   ```java
+   enum Color{
+       GREEN,RED,BLUE;
+
+       public static void main(String[] args) throws InterruptedException {
+           Color color = Color.BLUE;
+
+           switch (color) {
+               case RED:
+                   System.out.println("红色");
+                   break;
+               case GREEN:
+                   System.out.println("绿色");
+                   break;
+               case BLUE:
+                   System.out.println("蓝色");
+                   break;
+           }
+
+       }
+   }
+   ```
