Update Post “基础巩固第三天”

--- a/source/_posts/基础巩固第三天.md
+++ b/source/_posts/基础巩固第三天.md
@@ -166,3 +166,189 @@ date: 2021-12-17T05:47:23.046Z
        }
    }
    ```
+5. IO流
+
+   1. File类
+
+      ```java
+      System.out.println(File.pathSeparator);       //系统根路径符合
+      System.out.println(File.separator);           //路径分隔符
+
+
+      File file3 = new File("/Users/j/Desktop/files/t/");
+      file3.mkdir();     //创建目录
+
+      String apath = file3.getAbsolutePath();   //绝对路径
+      for(int i=0;i<100;i++){
+          File delfile = new File(file3.getParent()+File.separator+"t"+i);  //父路径
+          if(delfile.exists()){    //是否存在
+              delfile.delete();   //文件直接删除
+          }else {
+              System.out.println("不存在");
+          }
+      }
+
+      for(int i=0;i<100;i++){
+          File files = new File(apath +File.separator+ i);
+          files.createNewFile();    //创建文件
+      }
+
+      String[] list = file3.list();   //文件列表
+      for(String filename : list){
+          System.out.println(filename);
+      }
+
+      File[] files = file3.listFiles();  //所有文件（包括隐藏）
+      System.out.println(files.length);  //文件数量
+      System.out.println(file3.isDirectory()); //是否是文件夹
+      ```
+   2. FileInputStream和FileOutputStream
+
+      ```java
+      FileInputStream inputStream = null;
+      FileOutputStream outputStream = null;
+      try {
+          inputStream = new FileInputStream("/Users/j/Desktop/files/t/0");
+          outputStream = new FileOutputStream("/Users/j/Desktop/files/t/3");
+
+          byte[] buf = new byte[10];  //做缓存
+
+          int len = -1;
+          while((len=inputStream.read(buf)) != -1){
+              outputStream.write(buf,0,len);
+          }
+
+
+      } catch (FileNotFoundException e) {
+          e.printStackTrace();
+      } catch (IOException e) {
+          e.printStackTrace();
+      }finally {
+          try {
+              outputStream.close();
+              inputStream.close();
+          } catch (IOException e) {
+              e.printStackTrace();
+          }
+      }
+      ```
+   3. FileReader和FileWriter
+
+      ```java
+      FileReader filereader = null;
+      FileWriter fileWriter = null;
+      try {
+          filereader = new FileReader("/Users/j/Desktop/files/t/0");
+          fileWriter = new FileWriter("/Users/j/Desktop/files/t/4");
+
+          char[] chars = new char[4];
+          StringBuilder stringBuilder = new StringBuilder();
+
+          int len =-1;
+          while((len = filereader.read(chars)) != -1){
+              stringBuilder.append(chars,0,len);
+          }
+
+
+          String s = stringBuilder.toString();
+
+
+          fileWriter.write(s);
+          fileWriter.flush();
+
+      } catch (FileNotFoundException e) {
+          e.printStackTrace();
+      } catch (IOException e) {
+          e.printStackTrace();
+      }finally {
+          try {
+              fileWriter.close();
+              filereader.close();
+          } catch (IOException e) {
+              e.printStackTrace();
+          }
+
+      }
+      ```
+   4. 字符缓冲流
+
+      ```java
+      FileReader filereader = null;
+      FileWriter fileWriter = null;
+      BufferedReader bufferedReader = null;
+      BufferedWriter bufferedWriter = null;
+      try {
+          filereader = new FileReader("/Users/j/Desktop/files/t/0");
+          fileWriter = new FileWriter("/Users/j/Desktop/files/t/5");
+
+          bufferedReader = new BufferedReader(filereader);
+          bufferedWriter = new BufferedWriter(fileWriter);
+
+          StringBuffer stringBuffer = new StringBuffer();
+
+          String line = null;
+          while((line = bufferedReader.readLine()) != null){
+              stringBuffer.append(line);
+          }
+
+
+          String s = stringBuffer.toString();
+
+
+          bufferedWriter.write(s);
+          fileWriter.flush();
+
+      } catch (FileNotFoundException e) {
+          e.printStackTrace();
+      } catch (IOException e) {
+          e.printStackTrace();
+      }finally {
+          try {
+              bufferedWriter.close();
+              bufferedReader.close();
+              fileWriter.close();
+              filereader.close();
+          } catch (IOException e) {
+              e.printStackTrace();
+          }
+
+      }
+      ```
+   5. 二进制流
+
+      ```java
+      FileInputStream inputStream = null;
+      FileOutputStream outputStream = null;
+      DataInputStream dataInputStream = null;
+      DataOutputStream dataOutputStream = null;
+      try {
+          inputStream = new FileInputStream("/Users/j/Desktop/files/t/0");
+          outputStream = new FileOutputStream("/Users/j/Desktop/files/t/7");
+
+          dataInputStream = new DataInputStream(inputStream);
+          dataOutputStream = new DataOutputStream(outputStream);
+
+          byte[] bytes = new byte[10];
+
+          int len = -1;
+          while ((len = dataInputStream.read(bytes)) != -1){
+              dataOutputStream.write(bytes,0,len);
+          }
+
+
+      } catch (FileNotFoundException e) {
+          e.printStackTrace();
+      } catch (IOException e) {
+          e.printStackTrace();
+      }finally {
+          try {
+              dataOutputStream.close();
+              dataInputStream.close();
+              outputStream.close();
+              inputStream.close();
+          } catch (IOException e) {
+              e.printStackTrace();
+          }
+
+      }
+      ```
