Update Post “集合专题”

--- a/source/_posts/集合专题.md
+++ b/source/_posts/集合专题.md
@@ -84,6 +84,7 @@ date: 2021-12-16T09:52:32.480Z
    > HashMap
 
    * 线程不安全的对象，效率高 （put同时get不会阻塞）（多线程同时操作一HashMap，线程不安全，甚至死锁）
+   * 多线程put会报错Exception in thread "Thread-4" Exception in thread "Thread-3" java.lang.OutOfMemoryError: GC overhead limit exceeded
 
    > ConcurrentHashMap
 
